--- a/mods/mythicmetals.pw.toml
+++ b/mods/mythicmetals.pw.toml
@@ -1,13 +1,13 @@
 name = "Mythic Metals"
-filename = "mythicmetals-0.19.0+1.20-alpha.jar"
+filename = "mythicmetals-0.19.2+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/bAWzYNRd/versions/iA7KLbpI/mythicmetals-0.19.0%2B1.20-alpha.jar"
+url = "https://cdn.modrinth.com/data/bAWzYNRd/versions/ncgynsU3/mythicmetals-0.19.2%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "6a6117fee4c98535c51e1f0a94232a38058a5b98"
+hash = "0c1b8d28826298132f531dc5f139be11f304d9ee"
 
 [update]
 [update.modrinth]
 mod-id = "bAWzYNRd"
-version = "iA7KLbpI"
+version = "ncgynsU3"
