--- a/mods/emi.pw.toml
+++ b/mods/emi.pw.toml
@@ -1,13 +1,13 @@
 name = "EMI"
-filename = "emi-1.0.28+1.20.1+fabric.jar"
+filename = "emi-1.1.0+1.20.1+fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/pWonvbOv/emi-1.0.28%2B1.20.1%2Bfabric.jar"
+url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/r10gArKs/emi-1.1.0%2B1.20.1%2Bfabric.jar"
 hash-format = "sha1"
-hash = "641f6f0a402cd74b89d812a1ac2920362755980e"
+hash = "9855b01c01ac15b66f42e903aad524d0c24c6c81"
 
 [update]
 [update.modrinth]
 mod-id = "fRiHVvU7"
-version = "pWonvbOv"
+version = "r10gArKs"
