--- a/mods/unloaded-activity.pw.toml
+++ b/mods/unloaded-activity.pw.toml
@@ -1,6 +1,6 @@
 name = "Unloaded Activity"
 filename = "unloadedactivity-v0.5.0+1.20-1.20.1.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/Oo4rJCDP/versions/zKiryBj8/unloadedactivity-v0.5.0%2B1.20-1.20.1.jar"
