--- a/mods/yacl.pw.toml
+++ b/mods/yacl.pw.toml
@@ -1,6 +1,6 @@
 name = "YetAnotherConfigLib"
 filename = "yet-another-config-lib-fabric-3.2.1+1.20.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/3hsIB5yP/yet-another-config-lib-fabric-3.2.1%2B1.20.jar"
