--- a/mods/xaeros-world-map.pw.toml
+++ b/mods/xaeros-world-map.pw.toml
@@ -1,6 +1,9 @@
 name = "Xaero's World Map"
 filename = "XaerosWorldMap_1.37.2_Fabric_1.20.jar"
-side = "client"
+side = "both"
+
+[option]
+optional=true
 
 [download]
 url = "https://cdn.modrinth.com/data/NcUtCpym/versions/EKlLbMF8/XaerosWorldMap_1.37.2_Fabric_1.20.jar"
