--- a/mods/xaeros-world-map.pw.toml
+++ b/mods/xaeros-world-map.pw.toml
@@ -1,6 +1,6 @@
 name = "Xaero's World Map"
 filename = "XaerosWorldMap_1.37.2_Fabric_1.20.jar"
-side = "both"
+side = "client"
 
 [option]
 optional=true
