--- a/config/fabrication/features.ini
+++ b/config/fabrication/features.ini
@@ -879,7 +879,7 @@
 	; 
 	; Farmland will not get trampled.
 	; 
-	no_trample=unset
+	no_trample=true
 
 	; Client Only
 	; 
@@ -1054,7 +1054,7 @@
 	; 
 	; Requires water_fills_on_break to have at least 2 water 
 	; sources. 
-	extra.water_fills_on_break_strict=unset
+	extra.water_fills_on_break_strict=true
 
 	; Server & Client (Client Optional)
 	; 
@@ -1228,7 +1228,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/water_fills_on_break.mp4
-	water_fills_on_break=unset
+	water_fills_on_break=true
 
 ; New mechanics and powerful additions.
 ; 
