--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.8.84-fabric.jar"
+filename = "moonlight-1.20-2.9.3-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/Fi0TCD7O/moonlight-1.20-2.8.84-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/OkmMqBP5/moonlight-1.20-2.9.3-fabric.jar"
 hash-format = "sha1"
-hash = "6f26507cb34a5c78666b0da13d9d8165abcef9e4"
+hash = "3c908d398e54a9868526995338b33ace2c8e122f"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "Fi0TCD7O"
+version = "OkmMqBP5"
