--- a/mods/yigd.pw.toml
+++ b/mods/yigd.pw.toml
@@ -1,13 +1,13 @@
 name = "You're in Grave Danger"
-filename = "youre-in-grave-danger-2.0.0-beta.6.jar"
+filename = "youre-in-grave-danger-2.0.0-beta.7.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/HnD1GX6e/versions/7YpT3kYv/youre-in-grave-danger-2.0.0-beta.6.jar"
+url = "https://cdn.modrinth.com/data/HnD1GX6e/versions/8cRBFfoR/youre-in-grave-danger-2.0.0-beta.7.jar"
 hash-format = "sha1"
-hash = "8109661be9a0536b56b92083989b5231e8db51b0"
+hash = "7f2c42c947cc49eee2284581060760312c965aef"
 
 [update]
 [update.modrinth]
 mod-id = "HnD1GX6e"
-version = "7YpT3kYv"
+version = "8cRBFfoR"
