--- a/mods/xaeros-world-map.pw.toml
+++ b/mods/xaeros-world-map.pw.toml
@@ -2,6 +2,10 @@ name = "Xaero's World Map"
 filename = "XaerosWorldMap_1.37.7_Fabric_1.20.jar"
 side = "client"
 
+[option]
+optional = true
+description = "Fast & simple world map mod. Integrates with Xaero's Minimap."
+
 [download]
 url = "https://cdn.modrinth.com/data/NcUtCpym/versions/sldtuPfE/XaerosWorldMap_1.37.7_Fabric_1.20.jar"
 hash-format = "sha1"
@@ -11,6 +15,3 @@ hash = "4ada5a5749ffa1ce2d2a008d9a8bbf744c088319"
 [update.modrinth]
 mod-id = "NcUtCpym"
 version = "sldtuPfE"
-
-[option]
-optional = true
