--- a/mods/ambientsounds.pw.toml
+++ b/mods/ambientsounds.pw.toml
@@ -4,6 +4,7 @@ side = "client"
 
 [option]
 optional = true
+description = "As it says on the tin. Not recommended to use with Dynamic Surroundings or Charmonium."
 
 [download]
 url = "https://cdn.modrinth.com/data/fM515JnW/versions/uFkj6MGq/AmbientSounds_FABRIC_v5.3.8_mc1.20.1.jar"
