--- a/mods/durabilityviewer.pw.toml
+++ b/mods/durabilityviewer.pw.toml
@@ -4,6 +4,7 @@ side = "client"
 
 [option]
 optional = true
+description = "Shows tool and armour durability on screen. Warns you when durability gets low."
 
 [download]
 url = "https://cdn.modrinth.com/data/LTM1f0yY/versions/iVlTsxR7/durabilityviewer-1.20-fabric0.83.0-1.10.5.jar"
