--- a/mods/sound-physics-remastered.pw.toml
+++ b/mods/sound-physics-remastered.pw.toml
@@ -4,6 +4,7 @@ side = "client"
 
 [option]
 optional = true
+description = "Realistic sound attenuation, reverberation, and absorption through blocks."
 
 [download]
 url = "https://cdn.modrinth.com/data/qyVF9oeo/versions/GdHd0uVw/sound-physics-remastered-fabric-1.20.1-1.3.1.jar"
