--- a/mods/xaeros-minimap.pw.toml
+++ b/mods/xaeros-minimap.pw.toml
@@ -2,6 +2,10 @@ name = "Xaero's Minimap"
 filename = "Xaeros_Minimap_23.9.7_Fabric_1.20.jar"
 side = "client"
 
+[option]
+optional = true
+description = "Fast & simple minimap mod. Integrates with Xaero's World Map."
+
 [download]
 url = "https://cdn.modrinth.com/data/1bokaNcj/versions/rbY8QUIj/Xaeros_Minimap_23.9.7_Fabric_1.20.jar"
 hash-format = "sha1"
@@ -11,6 +15,3 @@ hash = "15b16b9bd9de172128029aa1318fb24cfa515ec9"
 [update.modrinth]
 mod-id = "1bokaNcj"
 version = "rbY8QUIj"
-
-[option]
-optional = true
