--- a/mods/xaeros-world-map.pw.toml
+++ b/mods/xaeros-world-map.pw.toml
@@ -1,17 +1,17 @@
 name = "Xaero's World Map"
-filename = "XaerosWorldMap_1.37.7_Fabric_1.20.jar"
+filename = "XaerosWorldMap_1.37.8_Fabric_1.20.jar"
 side = "client"
 
-[option]
-optional = true
-description = "Fast & simple world map mod. Integrates with Xaero's Minimap."
-
 [download]
-url = "https://cdn.modrinth.com/data/NcUtCpym/versions/sldtuPfE/XaerosWorldMap_1.37.7_Fabric_1.20.jar"
+url = "https://cdn.modrinth.com/data/NcUtCpym/versions/RR2qcEow/XaerosWorldMap_1.37.8_Fabric_1.20.jar"
 hash-format = "sha1"
-hash = "4ada5a5749ffa1ce2d2a008d9a8bbf744c088319"
+hash = "da26e28068b1086da1dbfa88e8a3220dd06c913c"
 
 [update]
 [update.modrinth]
 mod-id = "NcUtCpym"
-version = "sldtuPfE"
+version = "RR2qcEow"
+
+[option]
+optional = true
+description = "Fast & simple world map mod. Integrates with Xaero's Minimap."
