--- a/mods/expanded-storage.pw.toml
+++ b/mods/expanded-storage.pw.toml
@@ -1,13 +1,13 @@
 name = "Expanded Storage"
-filename = "expandedstorage-10.1.1-fabric.jar"
+filename = "expandedstorage-10.1.2-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/F56tBubk/versions/cmQgg64v/expandedstorage-10.1.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/F56tBubk/versions/QKXAUOit/expandedstorage-10.1.2-fabric.jar"
 hash-format = "sha1"
-hash = "2d714f7f91fd2e555cc14c91fa5be86b8453972c"
+hash = "417304ed152bf4630c76edd73c889f8c8e92b46e"
 
 [update]
 [update.modrinth]
 mod-id = "F56tBubk"
-version = "cmQgg64v"
+version = "QKXAUOit"
