--- a/mods/mythicmetals.pw.toml
+++ b/mods/mythicmetals.pw.toml
@@ -1,13 +1,13 @@
 name = "Mythic Metals"
-filename = "mythicmetals-0.19.2+1.20.1.jar"
+filename = "mythicmetals-0.19.3+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/bAWzYNRd/versions/ncgynsU3/mythicmetals-0.19.2%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/bAWzYNRd/versions/AcBxwlrL/mythicmetals-0.19.3%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "0c1b8d28826298132f531dc5f139be11f304d9ee"
+hash = "c4e046769828bb5463950ceb3285a553093b7b57"
 
 [update]
 [update.modrinth]
 mod-id = "bAWzYNRd"
-version = "ncgynsU3"
+version = "AcBxwlrL"
