--- a/mods/revelationary.pw.toml
+++ b/mods/revelationary.pw.toml
@@ -1,13 +1,13 @@
 name = "Revelationary"
-filename = "revelationary-1.3.6+1.20.1.jar"
+filename = "revelationary-1.3.7+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/eXrl5E3G/versions/sF2E0Rlo/revelationary-1.3.6%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/eXrl5E3G/versions/MlH70513/revelationary-1.3.7%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "73c23757f4d46166fea50a2f981086665e6a2e76"
+hash = "3bbb298ab8fd645aa79efb86f8f90eab3d9bafa9"
 
 [update]
 [update.modrinth]
 mod-id = "eXrl5E3G"
-version = "sF2E0Rlo"
+version = "MlH70513"
