--- a/mods/snow-real-magic.pw.toml
+++ b/mods/snow-real-magic.pw.toml
@@ -1,13 +1,13 @@
 name = "Snow! Real Magic! ⛄"
-filename = "SnowRealMagic-1.20.1-fabric-10.2.7.jar"
+filename = "SnowRealMagic-1.20.1-fabric-10.3.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/iJNje1E8/versions/EwRsMnRO/SnowRealMagic-1.20.1-fabric-10.2.7.jar"
+url = "https://cdn.modrinth.com/data/iJNje1E8/versions/x6aNMxSE/SnowRealMagic-1.20.1-fabric-10.3.1.jar"
 hash-format = "sha1"
-hash = "dcde3de9737f05b2c20597b326705c8faa0cb0c3"
+hash = "b98cac261dd491d96112274e24d4acc637e303e6"
 
 [update]
 [update.modrinth]
 mod-id = "iJNje1E8"
-version = "EwRsMnRO"
+version = "x6aNMxSE"
