--- a/mods/spectrum.pw.toml
+++ b/mods/spectrum.pw.toml
@@ -1,13 +1,13 @@
 name = "Spectrum"
-filename = "spectrum-1.7.4-deeper-down.jar"
+filename = "spectrum-1.7.5-deeper-down.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3rc31Hgo/versions/Pg5efHEv/spectrum-1.7.4-deeper-down.jar"
+url = "https://cdn.modrinth.com/data/3rc31Hgo/versions/XoENHosY/spectrum-1.7.5-deeper-down.jar"
 hash-format = "sha1"
-hash = "8ff7f855744b2cf5a527128e1c84c1eae1157aca"
+hash = "616abf815d6c4c025d5c4a50d87d6371012e6046"
 
 [update]
 [update.modrinth]
 mod-id = "3rc31Hgo"
-version = "Pg5efHEv"
+version = "XoENHosY"
