remove auto third person, unset (disable) weaponised pearls

--- a/config/fabrication/features.ini
+++ b/config/fabrication/features.ini
@@ -1324,7 +1324,7 @@
 	; 
 	; Pearls will teleport entities they hit and pull nearby 
 	; ones. 
-	extra.weaponized_pearls=true
+	extra.weaponized_pearls=unset
 
 	; Server & Client
 	; 
