--- a/mods/spectrum.pw.toml
+++ b/mods/spectrum.pw.toml
@@ -1,13 +1,13 @@
 name = "Spectrum"
-filename = "spectrum-1.7.5-deeper-down.jar"
+filename = "spectrum-1.7.6-deeper-down.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3rc31Hgo/versions/XoENHosY/spectrum-1.7.5-deeper-down.jar"
+url = "https://cdn.modrinth.com/data/3rc31Hgo/versions/SY8cxlg8/spectrum-1.7.6-deeper-down.jar"
 hash-format = "sha1"
-hash = "616abf815d6c4c025d5c4a50d87d6371012e6046"
+hash = "445b84c5791fb0b7b37ea2c4b7db881aeeb0b96d"
 
 [update]
 [update.modrinth]
 mod-id = "3rc31Hgo"
-version = "XoENHosY"
+version = "SY8cxlg8"
