--- a/mods/dynamicsurroundingsfabric.pw.toml
+++ b/mods/dynamicsurroundingsfabric.pw.toml
@@ -1,16 +1,16 @@
 name = "Dynamic Surroundings: Fabric Edition"
-filename = "DynamicSurroundings-Fabric-1.20.1-0.3.1.jar"
+filename = "DynamicSurroundings-Fabric-1.20.1-0.3.3.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/H7fshfpD/versions/d3ft8eE3/DynamicSurroundings-Fabric-1.20.1-0.3.1.jar"
+url = "https://cdn.modrinth.com/data/H7fshfpD/versions/SQuUb0Fo/DynamicSurroundings-Fabric-1.20.1-0.3.3.jar"
 hash-format = "sha1"
-hash = "a8d41879d6a903addbbd67ae13bd5d970ca16815"
+hash = "71d6ba63d3f767da2dee09e5be38314decff9379"
 
 [update]
 [update.modrinth]
 mod-id = "H7fshfpD"
-version = "d3ft8eE3"
+version = "SQuUb0Fo"
 
 [option]
 optional = true
