--- a/mods/journeymap.pw.toml
+++ b/mods/journeymap.pw.toml
@@ -1,17 +1,17 @@
 name = "JourneyMap"
-filename = "journeymap-1.20.1-5.9.18-fabric.jar"
+filename = "journeymap-1.20.1-5.9.20-fabric.jar"
 side = "both"
 
-[option]
-optional = true
-description = "Featureful minimap and world map."
-
 [download]
-url = "https://cdn.modrinth.com/data/lfHFW1mp/versions/jEeKb7lx/journeymap-1.20.1-5.9.18-fabric.jar"
+url = "https://cdn.modrinth.com/data/lfHFW1mp/versions/TcnA8zRy/journeymap-1.20.1-5.9.20-fabric.jar"
 hash-format = "sha1"
-hash = "4ee1f51cf2c112bc53a8fbd9c2097152db3c9f8c"
+hash = "0b39924fc230202bdb8cc2bb97652f47e761977c"
 
 [update]
 [update.modrinth]
 mod-id = "lfHFW1mp"
-version = "jEeKb7lx"
+version = "TcnA8zRy"
+
+[option]
+optional = true
+description = "Featureful minimap and world map."
