--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.9.7-fabric.jar"
+filename = "moonlight-1.20-2.11.9-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/jOzdT1LR/moonlight-1.20-2.9.7-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/WOsQY4RE/moonlight-1.20-2.11.9-fabric.jar"
 hash-format = "sha1"
-hash = "4555fdadb618bff57ea5ef67fe942bfc6cce9af4"
+hash = "87a3560cc34261e30b59549f64db97abe00b2cc9"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "jOzdT1LR"
+version = "WOsQY4RE"
