--- a/mods/necronomicon.pw.toml
+++ b/mods/necronomicon.pw.toml
@@ -1,13 +1,13 @@
 name = "Necronomicon API"
-filename = "Necronomicon-Fabric-1.4.1.jar"
+filename = "Necronomicon-Fabric-1.4.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/P1Kv5EAO/versions/QZadGyLs/Necronomicon-Fabric-1.4.1.jar"
+url = "https://cdn.modrinth.com/data/P1Kv5EAO/versions/twWimVNr/Necronomicon-Fabric-1.4.2.jar"
 hash-format = "sha1"
-hash = "a7e82dd9c452836d3055042567611cb2d1fcbe70"
+hash = "563eef8154c73e099012f58f1b12a011e9d2b5b2"
 
 [update]
 [update.modrinth]
 mod-id = "P1Kv5EAO"
-version = "QZadGyLs"
+version = "twWimVNr"
