--- a/mods/snow-real-magic.pw.toml
+++ b/mods/snow-real-magic.pw.toml
@@ -1,13 +1,13 @@
 name = "Snow! Real Magic! ⛄"
-filename = "SnowRealMagic-1.20.1-fabric-10.3.1.jar"
+filename = "SnowRealMagic-1.20.1-fabric-10.4.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/iJNje1E8/versions/x6aNMxSE/SnowRealMagic-1.20.1-fabric-10.3.1.jar"
+url = "https://cdn.modrinth.com/data/iJNje1E8/versions/ufVvgcyT/SnowRealMagic-1.20.1-fabric-10.4.2.jar"
 hash-format = "sha1"
-hash = "b98cac261dd491d96112274e24d4acc637e303e6"
+hash = "09b2d77fd8ea864a2ec80413bf9e1bf29535e094"
 
 [update]
 [update.modrinth]
 mod-id = "iJNje1E8"
-version = "x6aNMxSE"
+version = "ufVvgcyT"
