--- a/mods/tool-stats.pw.toml
+++ b/mods/tool-stats.pw.toml
@@ -1,13 +1,13 @@
 name = "Tool Stats"
-filename = "ToolStats-Fabric-1.20.1-16.0.7.jar"
+filename = "ToolStats-Fabric-1.20.1-16.0.8.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/vuGFx44e/versions/kjfbDyIw/ToolStats-Fabric-1.20.1-16.0.7.jar"
+url = "https://cdn.modrinth.com/data/vuGFx44e/versions/td2sMRkH/ToolStats-Fabric-1.20.1-16.0.8.jar"
 hash-format = "sha1"
-hash = "f30ea26259a3fadc051e0d662ec44644d5535e1f"
+hash = "a22260762f50b3e3e62483704d9cf77da39755e3"
 
 [update]
 [update.modrinth]
 mod-id = "vuGFx44e"
-version = "kjfbDyIw"
+version = "td2sMRkH"
