--- a/mods/yigd.pw.toml
+++ b/mods/yigd.pw.toml
@@ -1,13 +1,13 @@
 name = "You're in Grave Danger"
-filename = "youre-in-grave-danger-2.0.0-beta.7.jar"
+filename = "youre-in-grave-danger-2.0.0-beta.11.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/HnD1GX6e/versions/8cRBFfoR/youre-in-grave-danger-2.0.0-beta.7.jar"
+url = "https://cdn.modrinth.com/data/HnD1GX6e/versions/LXbUVLOk/youre-in-grave-danger-2.0.0-beta.11.jar"
 hash-format = "sha1"
-hash = "7f2c42c947cc49eee2284581060760312c965aef"
+hash = "2713fcffd7dc31d81a1c0999424fc42851ef2f94"
 
 [update]
 [update.modrinth]
 mod-id = "HnD1GX6e"
-version = "8cRBFfoR"
+version = "LXbUVLOk"
